# tracey

./: Cargo.toml
crates/tracey-api/: Cargo.toml
crates/tracey-config/: Cargo.toml
crates/tracey-proto/: Cargo.toml
crates/tracey/skill/references/: tracey-spec.md
tracey-zed/: Cargo.toml
