[package]
name = "tracey-api"
version.workspace = true
description = "API types for the tracey spec coverage dashboard"
keywords = ["specification", "coverage", "traceability", "api", "tracey"]
categories = ["development-tools"]
readme = "../../README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
facet = { workspace = true }
tracey-core = { workspace = true, default-features = false }
