[package]
name = "tracey-config"
version.workspace = true
description = "Configuration types for tracey spec coverage tool"
keywords = ["specification", "coverage", "traceability", "configuration", "tracey"]
categories = ["development-tools"]
readme = "../../README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
facet = { workspace = true }
